# carry-trace

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/datasets/: goal1_paper_like.yaml  goal1_smoke.yaml  goal2_paper.yaml  goal2_paper_standard_only.yaml  goal3_olmo3_natural_cot.yaml  myriad_olmo31_32b_instruct_smoke.yaml
configs/experiments/: goal1_olmo3_real.yaml  goal1_olmo3_smoke.yaml  goal1_smoke.yaml  goal2_olmo3_7b_probe_smoke.yaml  goal2_olmo3_real.yaml  goal2_olmo3_real_standard_only.yaml  goal35_olmo3_natural_cot_replay.yaml  goal3_olmo3_natural_cot.yaml  goal3_olmo3_natural_cot_clamp_pilot.yaml  goal3_olmo3_natural_cot_pilot.yaml  goal3_olmo3_natural_cot_replay.yaml  myriad_olmo31_32b_instruct_smoke.yaml
configs/probes/: goal2_probes_real.yaml  (+3 more)
docs/: configs.md  experiment-log.md  niall-todo.md  progress.md  proposal-notes.md  proposal.md  reproduction.md  runpod.md
notebooks/: olmo31_32b_subset_planner_uv_subprocess_colab.ipynb  olmo31_32b_think_instruct_subset_planner_colab.ipynb  olmo3_7b_think_colab_benchmark.ipynb  olmo3_think_budget_sweep_colab.ipynb  qwen3_4b_frugal_thinking_transformers_colab.ipynb
scripts/: export_goal1_outputs.py  myriad_olmo31_32b_instruct_smoke.sh  olmo31_subset_planner.py  openrouter_olmo_probe.py  runpod_setup.sh  sync_from_runpod.sh  sync_to_myriad.sh  sync_to_runpod.sh
tests/: test_arithmetic.py  test_dataset_and_cli.py  test_figures.py  test_goal2.py  test_goal2_probes.py  test_goal3.py  test_goal35.py  test_goal3_datasets.py  test_hf_integration.py  test_models.py  test_parsing.py  test_prompts.py
(+27 files in other folders)
