[project]
name = "carry-trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndalton12", email = "niall.dalton12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
